--- a/index.html
+++ b/index.html
@@ -486,10 +486,23 @@
 <div>
     <ul>
         <li><strong>Hydrogen</strong>: H</li>
-        <li><strong>Helium</strong>: He</li>
         <li><strong>Carbon</strong>: C</li>
         <li><strong>Nitrogen</strong>: N</li>
         <li><strong>Oxygen</strong>: O</li>
+        <li><strong>Sodium</strong>: Na</li>
+        <li><strong>Magnesium</strong>: Mg</li>
+        <li><strong>Aluminum</strong>: Al</li>
+        <li><strong>Silicon</strong>: Si</li>
+        <li><strong>Sulfur</strong>: S</li>
+        <li><strong>Potassium</strong>: K</li>
+        <li><strong>Calcium</strong>: Ca</li>
+        <li><strong>Iron</strong>: Fe</li>
+        <li><strong>Copper</strong>: Cu</li>
+        <li><strong>Zinc</strong>: Zn</li>
+        <li><strong>Silver</strong>: Ag</li>
+        <li><strong>Gold</strong>: Au</li>
+<h1><a href="https://quizlet.com/92846477/basic-elements-flash-cards/?funnelUUID=3d489f32-cd8f-43b1-8b52-a7b98e49a439"></a>Quizlet for Element Symbols</h1>
+
         <!-- Add more elements as needed -->
     </ul>
 </div>
