--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         <li><strong>Zinc</strong>: Zn</li>
         <li><strong>Silver</strong>: Ag</li>
         <li><strong>Gold</strong>: Au</li>
-<h1><a href="https://quizlet.com/92846477/basic-elements-flash-cards/?funnelUUID=3d489f32-cd8f-43b1-8b52-a7b98e49a439"></a>Quizlet for Element Symbols</h1>
+<a href="https://quizlet.com/92846477/basic-elements-flash-cards/?funnelUUID=3d489f32-cd8f-43b1-8b52-a7b98e49a439">Quizlet for Element Symbols</h1>
 
         <!-- Add more elements as needed -->
     </ul>
