--- a/index.html
+++ b/index.html
@@ -503,6 +503,124 @@
         <li><strong>Gold</strong>: Au</li>
 <a href="https://quizlet.com/92846477/basic-elements-flash-cards/?funnelUUID=3d489f32-cd8f-43b1-8b52-a7b98e49a439">Quizlet for Element Symbols</h1>
 
+<div class="table-container">
+    <div class="periodic-table">
+        <!-- Period 1 -->
+        <div class="element nonmetal">
+            <div>1</div>
+            <strong>H</strong>
+            <div>Hydrogen</div>
+            <div class="tooltip">Hydrogen<br>Atomic Number: 1</div>
+        </div>
+        <div class="element empty"></div>
+        <!-- ... empty cells ... -->
+        <div class="element empty" style="grid-column: span 16;"></div>
+        <div class="element noble-gas">
+            <div>2</div>
+            <strong>He</strong>
+            <div>Helium</div>
+            <div class="tooltip">Helium<br>Atomic Number: 2</div>
+        </div>
+
+        <!-- Period 2 -->
+        <div class="element alkali-metal">
+            <div>3</div>
+            <strong>Li</strong>
+            <div>Lithium</div>
+            <div class="tooltip">Lithium<br>Atomic Number: 3</div>
+        </div>
+        <div class="element alkaline-earth-metal">
+            <div>4</div>
+            <strong>Be</strong>
+            <div>Beryllium</div>
+            <div class="tooltip">Beryllium<br>Atomic Number: 4</div>
+        </div>
+        <div class="element empty" style="grid-column: span 10;"></div>
+        <div class="element metalloid">
+            <div>5</div>
+            <strong>B</strong>
+            <div>Boron</div>
+            <div class="tooltip">Boron<br>Atomic Number: 5</div>
+        </div>
+        <div class="element nonmetal">
+            <div>6</div>
+            <strong>C</strong>
+            <div>Carbon</div>
+            <div class="tooltip">Carbon<br>Atomic Number: 6</div>
+        </div>
+        <div class="element nonmetal">
+            <div>7</div>
+            <strong>N</strong>
+            <div>Nitrogen</div>
+            <div class="tooltip">Nitrogen<br>Atomic Number: 7</div>
+        </div>
+        <div class="element nonmetal">
+            <div>8</div>
+            <strong>O</strong>
+            <div>Oxygen</div>
+            <div class="tooltip">Oxygen<br>Atomic Number: 8</div>
+        </div>
+        <div class="element halogen">
+            <div>9</div>
+            <strong>F</strong>
+            <div>Fluorine</div>
+            <div class="tooltip">Fluorine<br>Atomic Number: 9</div>
+        </div>
+        <div class="element noble-gas">
+            <div>10</div>
+            <strong>Ne</strong>
+            <div>Neon</div>
+            <div class="tooltip">Neon<br>Atomic Number: 10</div>
+        </div>
+
+        <!-- Continue building the table for other periods -->
+        <!-- For brevity, not all elements are included in this snippet -->
+    </div>
+</div>
+
+<!-- Family Legend -->
+<div class="family-legend">
+    <div>
+        <div class="legend-color alkali-metal"></div>
+        <span>Alkali Metals</span>
+    </div>
+    <div>
+        <div class="legend-color alkaline-earth-metal"></div>
+        <span>Alkaline Earth Metals</span>
+    </div>
+    <div>
+        <div class="legend-color transition-metal"></div>
+        <span>Transition Metals</span>
+    </div>
+    <div>
+        <div class="legend-color post-transition-metal"></div>
+        <span>Post-Transition Metals</span>
+    </div>
+    <div>
+        <div class="legend-color metalloid"></div>
+        <span>Metalloids</span>
+    </div>
+    <div>
+        <div class="legend-color nonmetal"></div>
+        <span>Nonmetals</span>
+    </div>
+    <div>
+        <div class="legend-color halogen"></div>
+        <span>Halogens</span>
+    </div>
+    <div>
+        <div class="legend-color noble-gas"></div>
+        <span>Noble Gases</span>
+    </div>
+    <div>
+        <div class="legend-color lanthanide"></div>
+        <span>Lanthanides</span>
+    </div>
+    <div>
+        <div class="legend-color actinide"></div>
+        <span>Actinides</span>
+    </div>
+</div>
         <!-- Add more elements as needed -->
     </ul>
 </div>
