--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@
         <li><strong>Zinc</strong>: Zn</li>
         <li><strong>Silver</strong>: Ag</li>
         <li><strong>Gold</strong>: Au</li>
-<a href="https://quizlet.com/92846477/basic-elements-flash-cards/?funnelUUID=3d489f32-cd8f-43b1-8b52-a7b98e49a439">Quizlet for Element Symbols</h1>
-
+<a href="https://quizlet.com/92846477/basic-elements-flash-cards/?funnelUUID=3d489f32-cd8f-43b1-8b52-a7b98e49a439">Quizlet for Element Symbols</h1></a>
+</div>
 <div class="table-container">
     <div class="periodic-table">
         <!-- Period 1 -->
