--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             border-color: #c0392b;
         }
         /* Popup Styles */
-        .popup, .welcome-popup {
+        .popup {
             position: fixed;
             display: none;
             width: 80%;
@@ -135,17 +135,14 @@
         .popup.incorrect {
             border-color: #e74c3c;
         }
-        .welcome-popup {
-            border-color: #1abc9c;
-        }
-        .popup h2, .welcome-popup h2 {
+        .popup h2 {
             margin-top: 0;
             color: #2c3e50;
         }
-        .popup p, .welcome-popup p {
+        .popup p {
             color: #34495e;
         }
-        .popup button, .welcome-popup button {
+        .popup button {
             margin-top: 15px;
             padding: 10px 20px;
             cursor: pointer;
@@ -156,7 +153,7 @@
             font-size: 16px;
             transition: background-color 0.3s ease;
         }
-        .popup button:hover, .welcome-popup button:hover {
+        .popup button:hover {
             background-color: #2980b9;
         }
         /* Back to Top Link */
@@ -185,7 +182,7 @@
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            // Collapsible Sections
+            // Existing JavaScript code for collapsible sections
             var coll = document.getElementsByClassName("collapsible");
             for (var i = 0; i < coll.length; i++) {
                 coll[i].addEventListener("click", function() {
@@ -198,7 +195,8 @@
                     }
                 });
             }
-            // Quiz Options
+
+            // Existing JavaScript code for quiz options
             var quizOptions = document.getElementsByClassName('quiz-option');
             for (var i = 0; i < quizOptions.length; i++) {
                 quizOptions[i].addEventListener('click', function() {
@@ -214,13 +212,27 @@
                         }
                     }
                     var isCorrect = selected.dataset.correct === "true";
-                    showPopup(isCorrect, selected.dataset.explanation);
+                    showQuizPopup(isCorrect, selected.dataset.explanation);
                 });
             }
-            // Show Welcome Popup on Page Load
+
+            // Show the welcome popup when the page loads
             showWelcomePopup();
         });
-        function showPopup(isCorrect, explanation) {
+
+        function showWelcomePopup() {
+            var welcomePopup = document.getElementById('welcome-popup');
+            welcomePopup.style.display = 'block';
+            document.body.classList.add('popup-active');
+        }
+
+        function closeWelcomePopup() {
+            var welcomePopup = document.getElementById('welcome-popup');
+            welcomePopup.style.display = 'none';
+            document.body.classList.remove('popup-active');
+        }
+
+        function showQuizPopup(isCorrect, explanation) {
             var popup = document.getElementById('popup');
             var popupText = document.getElementById('popup-text');
             var popupExplanation = document.getElementById('popup-explanation');
@@ -230,23 +242,22 @@
             popup.style.display = 'block';
             document.body.classList.add('popup-active');
         }
-        function closePopup() {
+
+        function closeQuizPopup() {
             var popup = document.getElementById('popup');
             popup.style.display = 'none';
             document.body.classList.remove('popup-active');
         }
-        function showWelcomePopup() {
-            var welcomePopup = document.getElementById('welcome-popup');
-            welcomePopup.style.display = 'block';
-            document.body.classList.add('popup-active');
-        }
-        function closeWelcomePopup() {
-            var welcomePopup = document.getElementById('welcome-popup');
-            welcomePopup.style.display = 'none';
-            document.body.classList.remove('popup-active');
-        }
     </script>
 </head>
+<body>
+
+    <!-- Welcome Popup -->
+    <div id="welcome-popup" class="popup">
+        <h2>Welcome!</h2>
+        <p>Thank You for using my project. If you have any recommendations, please text me at (443)-243-6409 or email me at both vassarjd@gmail.com or jvassar27@students.gilman.edu !</p>
+        <button onclick="closeWelcomePopup()">Close</button>
+    </div>
 <body>
 
 <nav>
