--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Welcome Popup -->
     <div id="welcome-popup" class="popup">
         <h2>Welcome!</h2>
-        <p>Thank you for using this interactive study guide. We hope it helps you in your studies!</p>
+        <p>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409. Thank you to everyone who told me about the answers not working!</p>
         <button onclick="closeWelcomePopup()">Close</button>
     </div>
 
