--- a/index.html
+++ b/index.html
@@ -470,95 +470,16 @@
 
         <!-- Practice Problems -->
 
+<!-- Practice Problems Section -->
 <h2 id="practice-problems">Practice Problems</h2>
 
-<h3>I. States of Matter</h3>
+<!-- Button to generate new questions -->
+<button id="generate-questions-button">Generate New Questions</button>
 
-<div class="question">
-    <p><strong>1.</strong> Which state of matter has a definite volume but takes the shape of its container?</p>
-    <div>
-        <div class="quiz-option" data-correct="false" data-explanation="Solids have a definite shape and volume.">A) Solid</div>
-        <div class="quiz-option" data-correct="true" data-explanation="Liquids have a definite volume but take the shape of their container.">B) Liquid</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Gases have neither definite shape nor volume.">C) Gas</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Plasma behaves like gas but is ionized.">D) Plasma</div>
-    </div>
-</div>
+<!-- Container where practice problems will be dynamically generated -->
+<div id="practice-problems-container"></div>
 
-<div class="question">
-    <p><strong>2.</strong> Which state of matter is characterized by particles that are tightly packed and only vibrate in place?</p>
-    <div>
-        <div class="quiz-option" data-correct="true" data-explanation="In solids, particles are tightly packed and only vibrate in place.">A) Solid</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Liquids have particles that can move past each other.">B) Liquid</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Gases have particles that move freely and are far apart.">C) Gas</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Plasma consists of ionized particles.">D) Plasma</div>
-    </div>
-</div>
 
-<div class="question">
-    <p><strong>3.</strong> In which state are particles far apart and move freely at high speeds?</p>
-    <div>
-        <div class="quiz-option" data-correct="false" data-explanation="Particles in solids are tightly packed.">A) Solid</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Particles in liquids are close but can slide past each other.">B) Liquid</div>
-        <div class="quiz-option" data-correct="true" data-explanation="Gases have particles that are far apart and move freely.">C) Gas</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Bose-Einstein condensates occur at near absolute zero temperatures.">D) Bose-Einstein Condensate</div>
-    </div>
-</div>
-
-<!-- II. Physical and Chemical Changes Practice Problems -->
-<h3>II. Physical and Chemical Changes</h3>
-
-<div class="question">
-    <p><strong>1.</strong> Which of the following is a physical change?</p>
-    <div>
-        <div class="quiz-option" data-correct="true" data-explanation="Boiling water is a physical change as it changes state but not composition.">A) Boiling water</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Burning wood is a chemical change.">B) Burning wood</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Rusting iron is a chemical change.">C) Rusting iron</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Baking bread is a chemical change.">D) Baking bread</div>
-    </div>
-</div>
-
-<div class="question">
-    <p><strong>2.</strong> Which of the following indicates a chemical change has occurred?</p>
-    <div>
-        <div class="quiz-option" data-correct="false" data-explanation="Change in shape is a physical change.">A) Change in shape</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Change in size is a physical change.">B) Change in size</div>
-        <div class="quiz-option" data-correct="true" data-explanation="Formation of gas bubbles without heating indicates a chemical change.">C) Formation of gas bubbles without heating</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Change from solid to liquid is a physical change.">D) Change from solid to liquid</div>
-    </div>
-</div>
-
-<!-- III. Classification of Matter Practice Problems -->
-<h3>III. Classification of Matter by Composition</h3>
-
-<div class="question">
-    <p><strong>1.</strong> Which of the following is a compound?</p>
-    <div>
-        <div class="quiz-option" data-correct="false" data-explanation="Oxygen gas (O₂) is an element.">A) Oxygen gas (O₂)</div>
-        <div class="quiz-option" data-correct="true" data-explanation="Water (H₂O) is a compound made of hydrogen and oxygen.">B) Water (H₂O)</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Gold (Au) is an element.">C) Gold (Au)</div>
-        <div class="quiz-option" data-correct="false" data-explanation="Air is a mixture.">D) Air</div>
-    </div>
-</div>
-
-<div class="question">
-    <p><strong>2.</strong> Saltwater is an example of a:</p>
-    <div>
-        <div class="quiz-option" data-correct="true" data-explanation="Saltwater is a homogeneous mixture (solution).">A) Homogeneous mixture</div>
-        <div class="quiz-option" data-correct="false" data-explanation="It's not a heterogeneous mixture.">B) Heterogeneous mixture</div>
-        <div class="quiz-option" data-correct="false" data-explanation="It's not a compound.">C) Compound</div>
-        <div class="quiz-option" data-correct="false" data-explanation="It's not a pure substance.">D) Pure substance</div>
-    </div>
-</div>
-
-<!-- Continue adding practice problems for each category in the same format -->
-
-<!-- IV. Theories of Heat Practice Problems -->
-<h3>IV. Theories of Heat</h3> <div class="question"> <p><strong>1.</strong> According to the caloric theory, heat is considered to be:</p> <div> <div class="quiz-option" data-correct="true" data-explanation="The caloric theory posits that heat is a weightless fluid called caloric.">A) A weightless fluid that flows from hot to cold objects</div> <div class="quiz-option" data-correct="false" data-explanation="Heat as kinetic energy of particles is part of the kinetic theory, not the caloric theory.">B) The kinetic energy of particles</div> <div class="quiz-option" data-correct="false" data-explanation="Heat as a result of chemical reactions is not the basis of the caloric theory.">C) The result of chemical reactions</div> <div class="quiz-option" data-correct="false" data-explanation="Heat as electromagnetic radiation is not related to the caloric theory.">D) A form of electromagnetic radiation</div> </div> </div> <div class="question"> <p><strong>2.</strong> Which phenomenon could the caloric theory NOT adequately explain?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Conduction was explained by the flow of caloric fluid.">A) Heat conduction between metals</div> <div class="quiz-option" data-correct="true" data-explanation="The caloric theory could not explain the generation of heat through friction.">B) Generation of heat through friction</div> <div class="quiz-option" data-correct="false" data-explanation="Temperature changes were explained by the amount of caloric present.">C) Temperature changes in substances</div> <div class="quiz-option" data-correct="false" data-explanation="Phase changes were thought to involve absorption or release of caloric.">D) Phase changes like melting and boiling</div> </div> </div> <div class="question"> <p><strong>3.</strong> The kinetic theory of heat proposes that:</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Heat as a fluid is the concept from the caloric theory.">A) Heat is a fluid that can be transferred</div> <div class="quiz-option" data-correct="true" data-explanation="The kinetic theory states that heat is due to the motion of particles.">B) Heat is the energy associated with the motion of particles</div> <div class="quiz-option" data-correct="false" data-explanation="Chemical potential energy relates to chemical bonds, not heat directly.">C) Heat is stored as chemical potential energy</div> <div class="quiz-option" data-correct="false" data-explanation="Heat as mass converted to energy is a concept from nuclear reactions, not kinetic theory.">D) Heat results from mass being converted to energy</div> </div> </div>
-<h3>V. Element Symbols</h3> <div class="question"> <p><strong>1.</strong> Which element is represented by the symbol 'Fe'?</p> <div> <div class="quiz-option" data-correct="true" data-explanation="Fe is the symbol for iron, derived from its Latin name 'ferrum'.">A) Iron</div> <div class="quiz-option" data-correct="false" data-explanation="Fluorine is represented by 'F'.">B) Fluorine</div> <div class="quiz-option" data-correct="false" data-explanation="Tin is represented by 'Sn'.">C) Tin</div> <div class="quiz-option" data-correct="false" data-explanation="Lead is represented by 'Pb'.">D) Lead</div> </div> </div> <div class="question"> <p><strong>2.</strong> 'Ag' is the chemical symbol for which element?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Gold is represented by 'Au'.">A) Gold</div> <div class="quiz-option" data-correct="true" data-explanation="Ag is the symbol for silver, from the Latin 'argentum'.">B) Silver</div> <div class="quiz-option" data-correct="false" data-explanation="Mercury is represented by 'Hg'.">C) Mercury</div> <div class="quiz-option" data-correct="false" data-explanation="Aluminum is represented by 'Al'.">D) Aluminum</div> </div> </div> <div class="question"> <p><strong>3.</strong> The symbol 'Na' stands for which element?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="'Ne' is the symbol for neon.">A) Neon</div> <div class="quiz-option" data-correct="false" data-explanation="'Nitrogen' is represented by 'N'.">B) Nitrogen</div> <div class="quiz-option" data-correct="true" data-explanation="Na is the symbol for sodium, from the Latin 'natrium'.">C) Sodium</div> <div class="quiz-option" data-correct="false" data-explanation="'Nickel' is represented by 'Ni'.">D) Nickel</div> </div> </div>
-<h3>VI. Periodic Families</h3> <div class="question"> <p><strong>1.</strong> Elements in the halogen family are known for being:</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Alkali metals are highly reactive metals.">A) Highly reactive metals</div> <div class="quiz-option" data-correct="true" data-explanation="Halogens are highly reactive non-metals with seven valence electrons.">B) Highly reactive non-metals</div> <div class="quiz-option" data-correct="false" data-explanation="Noble gases are inert under standard conditions.">C) Inert gases</div> <div class="quiz-option" data-correct="false" data-explanation="Transition metals have variable oxidation states.">D) Metals with variable oxidation states</div> </div> </div> <div class="question"> <p><strong>2.</strong> Which group contains elements with two valence electrons?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Group 1 elements have one valence electron.">A) Group 1 (Alkali Metals)</div> <div class="quiz-option" data-correct="true" data-explanation="Group 2 elements are the Alkaline Earth Metals with two valence electrons.">B) Group 2 (Alkaline Earth Metals)</div> <div class="quiz-option" data-correct="false" data-explanation="Group 17 elements have seven valence electrons.">C) Group 17 (Halogens)</div> <div class="quiz-option" data-correct="false" data-explanation="Group 18 elements have full valence shells.">D) Group 18 (Noble Gases)</div> </div> </div> <div class="question"> <p><strong>3.</strong> The noble gases are located in which group of the periodic table?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Group 1 contains the alkali metals.">A) Group 1</div> <div class="quiz-option" data-correct="false" data-explanation="Group 16 contains the chalcogens.">B) Group 16</div> <div class="quiz-option" data-correct="false" data-explanation="Group 17 contains the halogens.">C) Group 17</div> <div class="quiz-option" data-correct="true" data-explanation="Group 18 contains the noble gases.">D) Group 18</div> </div> </div>
-<h3>VII. Metals vs Non-Metals</h3> <div class="question"> <p><strong>1.</strong> Which of the following is a characteristic of metals?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Non-metals are typically brittle when solid.">A) Brittle when solid</div> <div class="quiz-option" data-correct="true" data-explanation="Metals are good conductors of heat and electricity.">B) Good conductor of electricity</div> <div class="quiz-option" data-correct="false" data-explanation="Non-metals often have a dull appearance.">C) Dull appearance</div> <div class="quiz-option" data-correct="false" data-explanation="Non-metals are poor conductors of heat.">D) Poor conductor of heat</div> </div> </div> <div class="question"> <p><strong>2.</strong> Elements that have properties of both metals and non-metals are called:</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Metals have distinct metallic properties.">A) Metals</div> <div class="quiz-option" data-correct="false" data-explanation="Non-metals lack metallic properties.">B) Non-metals</div> <div class="quiz-option" data-correct="true" data-explanation="Metalloids have properties intermediate between metals and non-metals.">C) Metalloids</div> <div class="quiz-option" data-correct="false" data-explanation="Noble gases are inert gases with full valence shells.">D) Noble gases</div> </div> </div> <div class="question"> <p><strong>3.</strong> Which element is a non-metal?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Iron is a metal.">A) Iron</div> <div class="quiz-option" data-correct="false" data-explanation="Copper is a metal.">B) Copper</div> <div class="quiz-option" data-correct="true" data-explanation="Sulfur is a non-metal.">C) Sulfur</div> <div class="quiz-option" data-correct="false" data-explanation="Aluminum is a metal.">D) Aluminum</div> </div> </div>
-<h3>VIII. Laws of Definite Composition and Multiple Proportions</h3> <div class="question"> <p><strong>1.</strong> The Law of Definite Composition applies to:</p> <div> <div class="quiz-option" data-correct="true" data-explanation="Compounds have a definite composition by mass.">A) Compounds</div> <div class="quiz-option" data-correct="false" data-explanation="Mixtures have variable composition.">B) Mixtures</div> <div class="quiz-option" data-correct="false" data-explanation="Elements are pure substances but the law refers to compounds.">C) Elements</div> <div class="quiz-option" data-correct="false" data-explanation="Solutions are mixtures and have variable composition.">D) Solutions</div> </div> </div> <div class="question"> <p><strong>2.</strong> If two elements form more than one compound, their mass ratios are simple whole numbers. This is an example of the Law of:</p> <div> <div class="quiz-option" data-correct="false" data-explanation="The Law of Conservation of Mass states that mass is conserved in reactions.">A) Conservation of Mass</div> <div class="quiz-option" data-correct="false" data-explanation="The Law of Definite Composition refers to fixed composition in compounds.">B) Definite Composition</div> <div class="quiz-option" data-correct="true" data-explanation="The Law of Multiple Proportions describes this phenomenon.">C) Multiple Proportions</div> <div class="quiz-option" data-correct="false" data-explanation="Dalton's Law of Partial Pressures relates to gases.">D) Dalton's Law of Partial Pressures</div> </div> </div> <div class="question"> <p><strong>3.</strong> Which of the following best illustrates the Law of Multiple Proportions?</p> <div> <div class="quiz-option" data-correct="true" data-explanation="Carbon forms CO and CO₂, with oxygen mass ratios of 1:2.">A) Carbon forms CO and CO₂</div> <div class="quiz-option" data-correct="false" data-explanation="Water always has the same composition, illustrating the Law of Definite Composition.">B) Water is composed of H₂O</div> <div class="quiz-option" data-correct="false" data-explanation="Mass conservation relates to the Law of Conservation of Mass.">C) Mass is conserved in reactions</div> <div class="quiz-option" data-correct="false" data-explanation="Air is a mixture, not a compound with fixed ratios.">D) Air is composed of nitrogen and oxygen</div> </div> </div>
-<h3>IX. Dalton's Atomic Model</h3> <div class="question"> <p><strong>1.</strong> Which of the following is NOT a postulate of Dalton's Atomic Theory?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Dalton stated that atoms are indivisible.">A) Atoms are indivisible particles</div> <div class="quiz-option" data-correct="false" data-explanation="Atoms of the same element are identical in mass and properties.">B) Atoms of the same element are identical</div> <div class="quiz-option" data-correct="false" data-explanation="Atoms combine in simple whole-number ratios.">C) Atoms combine in simple whole-number ratios</div> <div class="quiz-option" data-correct="true" data-explanation="Dalton's theory did not include protons, neutrons, or electrons.">D) Atoms are made up of protons, neutrons, and electrons</div> </div> </div> <div class="question"> <p><strong>2.</strong> Dalton's Atomic Theory helped to explain the Law of Conservation of Mass by stating that:</p> <div> <div class="quiz-option" data-correct="true" data-explanation="Dalton proposed that atoms are rearranged during chemical reactions.">A) Atoms are rearranged during chemical reactions</div> <div class="quiz-option" data-correct="false" data-explanation="Atoms are neither created nor destroyed in reactions.">B) Atoms can be created and destroyed</div> <div class="quiz-option" data-correct="false" data-explanation="Mass is conserved, not converted into energy in chemical reactions.">C) Mass is converted into energy</div> <div class="quiz-option" data-correct="false" data-explanation="Atoms retain their identities in chemical reactions.">D) Atoms change their identities in reactions</div> </div> </div> <div class="question"> <p><strong>3.</strong> Which of the following is a limitation of Dalton's Atomic Theory?</p> <div> <div class="quiz-option" data-correct="false" data-explanation="Dalton correctly proposed that atoms combine in chemical reactions.">A) Atoms can combine in chemical reactions</div> <div class="quiz-option" data-correct="true" data-explanation="Atoms are divisible into subatomic particles, which Dalton did not know.">B) Atoms are indivisible and indestructible particles</div> <div class="quiz-option" data-correct="false" data-explanation="Dalton's theory did not address nuclear reactions.">C) Atoms can be converted into energy in nuclear reactions</div> <div class="quiz-option" data-correct="false" data-explanation="Dalton recognized that different elements have different masses.">D) Atoms of different elements have different masses</div> </div> </div>
 <!-- Popup for Quiz Feedback -->
      <div id="popup" class="popup">
             <h2 id="popup-text"></h2>
@@ -569,4 +490,3 @@
     </div>
 </body>
 </html>
-
