Revert "Update index.html"
This reverts commit 1d887793c15aa12b4a5e8bdfce367cf164a14253.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Welcome Popup -->
     <div id="welcome-popup" class="popup">
-        <h2>Welcome! Version 2.1a (Chatgpt V4 questions coming soon)</h2>
+        <h2>Welcome!</h2>
         <p>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409. Thank you to everyone who told me about the answers not working!</p>
         <button onclick="closeWelcomePopup()">Close</button>
     </div>
