--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
     <!-- Welcome Popup -->
     <div id="welcome-popup" class="popup">
-        <h2>Welcome!</h2>
-        <p>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409. Thank you to everyone who told me about the answers not working!</p>
+        <h1>Welcome!</h1>
+        <h2>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409. Thank you to everyone who told me about the answers not working!</h2>
+        <p>Due to Errors with hosting Chat Gpt Generated questions are paused and all questions will be made through me :) sorry :( (Note New Questions to be added tonight)</p>
+        
         <button onclick="closeWelcomePopup()">Close</button>
     </div>
 
