--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <!-- Welcome Popup -->
     <div id="welcome-popup" class="popup">
         <h1>Welcome!</h1>
-        <h2>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409. Thank you to everyone who told me about the answers not working!</h2>
-        <p>Due to Errors with hosting Chat Gpt Generated questions are paused and all questions will be made through me :) sorry :( (Note New Questions to be added tonight)</p>
+        <h2>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409.</h2>
+        <p>Update Log:
+        Version 2.0B
+            New Questions Added
+            Fixed previous problems with answer key not closing. Thanks to Ant, Greyson, Chase and Many More for telling me about this.
+        </p>
         
         <button onclick="closeWelcomePopup()">Close</button>
     </div>
