--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Enhanced Interactive Study Guide</title>
+    <title>Bowmaster Study Site</title>
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -11,7 +11,7 @@
 
     <!-- Welcome Popup -->
     <div id="welcome-popup" class="popup">
-        <h1>Welcome!</h1>
+        <h1>Welcome! I would suggest looking at the github of this website it has all the slides and suggestions for studying https://github.com/ThatsMyMute/Chem-Website</h1>
         <h2>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409.</h2>
         <p>Update Log:
         Version 2.0B
