--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Welcome Popup -->
     <div id="welcome-popup" class="popup">
-        <h1>Welcome! I would suggest looking at the github of this website it has all the slides and suggestions for studying https://github.com/ThatsMyMute/Chem-Website</h1>
+        <h1>Welcome! Please do not use this as your only study source please use the slides!</h1>
         <h2>Thank you for using this. Please, Please, Please, Please text me if something doesn't work at 443-243-6409.</h2>
         <p>Update Log:
         Version 2.0B
